<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_file_black"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/title_about">
        <menu>
            <item
                android:id="@+id/logcat"
                android:icon="@drawable/ic_logcat_white"
                android:title="@string/title_logcat" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_logcat_white"
                android:title="@string/frpc_version" />

        </menu>
    </item>
</menu>
